--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="My first webpage, with a favicon" />
+    <meta name="description" content="guessing a random number with a slider webpage" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="sophie nguyen" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,7 +44,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <title>xxx</title>
+    <title>test your luck!</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -55,29 +55,37 @@
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title">hi</span>
           <div class="mdl-layout-spacer"></div>
-          <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="">xxx</a>
-          </nav>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <p></p>
         <img
           src="./images/notebook-animation.svg"
           alt="computer"
           width="25%"
           height="25%"
         />
-        <div class="page-content">xxx</div>
+
+        <div id="slider-value">
+          ?
+        </div>
+
+        <!-- Default Slider -->
+        <label>
+          Slider's Value
+          <input  id="slider" class="mdl-slider mdl-js-slider" type="range"
+          min="0" max="100" value="0" tabindex="0" onchange="updateSliderValue(this.value)">
+        </label>
+        
+        <br>
+        <br>
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()"
         >
-          xxx
+          are you right??
         </button>
-        <!--basic text-->
-        <p></p>
-        <div id="hello-world"></div>
+        
+        <div id="answer"></div>
       </main>
     </div>
   </body>
