--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
             onchange="updateSliderValue(this.value)"
           />
         </label>
-
+        <br>
+        <br>
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="myButtonClicked()"
+        >
+          are you right??
+        </button>
         <br />
         <br />
         <div id="answer"></div>
